# CaliceAnalysis

./: .gitignore  LICENSE  README.md  data
cpp/: README.md  conf_struct.h  run.cc
cpp/PhDThesis/mip_data_sim_overlay/: mip_data_sim_overlay.cc
cpp/analysis/: CMakeLists.txt  build.sh  converter.cc  main.cc
cpp/analysis/include/: ECALAnalyzer.hh  FileSelector.hh  HistManager.hh  NtupleProcessor.hh  Sim2Build.hh  TreeIterator.hh  TreeReader.hh  TreeWriter.hh
cpp/analysis/src/: CMakeLists.txt  ECALAnalyzer.cc  FileSelector.cc  HistManager.cc  NtupleProcessor.cc  Sim2Build.cc  TreeIterator.cc  TreeReader.cc  TreeWriter.cc
cpp/include/: DecodedSLBAnalysis.h  EventControl.hh  Hists.hh  TBEvent.hh
cpp/macros/: draw_tree.cc  hold.cc
cpp/mask_check/: run_sim.cc
cpp/mask_check/include/: EventControl.hh
cpp/mask_check/macros/: mask_check_analysis.cc
cpp/mask_check/src/: EventControl.cc
cpp/myclass/: MakeClass.C
cpp/reco/: it_ene.sh  run.cc
cpp/reco/event_display/: MultiView.C  (+1 more)
cpp/reco_sim/: reco_sim_analysis.cc  slab_energy.cc
cpp/scripts/: energy_profile.cc  hit_2d.cc  nhit_len_analysis.cc  nhit_len_radius.cc  rdf_tree.cc  reco_sim_analysis.cc  sum_slab_energy_stack2gif.cc  sum_slab_energy_stack2gif_withSim.cc
cpp/sim/: it_ene.sh  run_sim.cc
cpp/src/: DecodedSLBAnalysis.cc  EventControl.cc  TBEvent.cc
jupyter/: retrigger.ipynb  uproot.ipynb  uproot_df.ipynb  uproot_np.ipynb
jupyter/.ipynb_checkpoints/: All_Hists-checkpoint.ipynb
python/: efficiency.py  readfile.py  retrigger.py
tools/: cycles.py  download_build_files.sh
tools/bad_cell_hv/: bad_cell_hv.py
tools/misc/: MakeClass.C  TBEvent.C  TBEvent.h
tools/myclass/: MakeClass.C  Sim2Build.C  Sim2Build.h  run_process.cc
tools/run_list/: lrun.py  run_list.txt
tools/templates/: HistManager.cc  HistManager.hh
(+20 files in other folders)
